[package]
name = "docker-test"
description = "A small helper library to build and run Rust applications in Docker (podman)"
version = "0.2.0"
license = "MPL-2.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/docker-test/"
repository = "https://github.com/tarka/docker-test/"
readme = "README.md"

edition = "2021"

[dependencies]
anyhow = "1.0.70"
camino = "1.1.4"
cfg-if = "1.0.0"
