[package]
name = "docker-test"
description = "A small helper library to build and run Rust applications in Docker (podman)"
version = "0.4.0"
license = "MPL-2.0"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/docker-test/"
repository = "https://github.com/tarka/docker-test/"
readme = "README.md"

edition = "2021"

[dependencies]
anyhow = "1.0.70"
camino = "1.1.4"
once_cell = "1.17.1"
quick_cache = "0.3.0"

[dev-dependencies]
